chore: adding the mindsdb sql queries that were executed in the mindsdb editor

--- a/notebooks/Generate SQLAlchemy models for MariaDB and FastAPI.ipynb
+++ b/notebooks/Generate SQLAlchemy models for MariaDB and FastAPI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "33df054e-d2ea-4ae0-9098-c16e33722874",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "a47cf472-c3bd-47f8-aa88-209fa527293a",
    "metadata": {},
    "outputs": [
@@ -27,7 +27,7 @@
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "b13ceeeb-2b54-4b58-8802-bff39b0af455",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "b3679306-d549-4de9-8cd0-62d8d0070c60",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "505ebce7-a652-41f7-ad15-c7997b26516b",
    "metadata": {},
    "outputs": [],
@@ -87,32 +87,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "5b6d3ba2-44d2-46e8-aa7f-acf7d6fa3993",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2023-06-29 14:00:00 30601.869140625\n",
-      "2023-06-29 15:00:00 30453.05078125\n",
-      "2023-06-29 16:00:00 30474.13671875\n",
-      "2023-06-29 17:00:00 30496.74609375\n",
-      "2023-06-29 18:00:00 30539.12890625\n",
-      "2023-06-29 19:00:00 30563.767578125\n",
-      "2023-06-29 20:00:00 30595.830078125\n",
-      "2023-06-29 21:00:00 30406.349609375\n",
-      "2023-06-29 22:00:00 30412.48046875\n",
-      "2023-06-29 23:00:00 30406.369140625\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "2452864f-21bd-40ea-98b6-b28896c49aa4",
    "metadata": {},
    "outputs": [],
@@ -135,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "id": "b593d77b-45e9-46bf-9f0b-2a8daa8b05f6",
    "metadata": {},
    "outputs": [
@@ -143,9 +126,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/c3/2_9zcb3s2s9bjfs2037dbdw40000gn/T/ipykernel_2737/4249216271.py:6: PydanticDeprecatedSince20: The `from_orm` method is deprecated; set `model_config['from_attributes']=True` and use `model_validate` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.5/migration/\n",
+      "/var/folders/c3/2_9zcb3s2s9bjfs2037dbdw40000gn/T/ipykernel_15243/4249216271.py:6: PydanticDeprecatedSince20: The `from_orm` method is deprecated; set `model_config['from_attributes']=True` and use `model_validate` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.5/migration/\n",
       "  data = BTCPriceSchema.from_orm(row_value)\n",
-      "/var/folders/c3/2_9zcb3s2s9bjfs2037dbdw40000gn/T/ipykernel_2737/4249216271.py:8: PydanticDeprecatedSince20: The `json` method is deprecated; use `model_dump_json` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.5/migration/\n",
+      "/var/folders/c3/2_9zcb3s2s9bjfs2037dbdw40000gn/T/ipykernel_15243/4249216271.py:8: PydanticDeprecatedSince20: The `json` method is deprecated; use `model_dump_json` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.5/migration/\n",
       "  print(data.json())\n"
      ]
     },
@@ -153,16 +136,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"Datetime\":\"2023-06-29T14:00:00\",\"Open\":30601.869140625,\"High\":30644.109375,\"Low\":30419.296875,\"Close\":30459.607421875,\"Volume\":0,\"Dividends\":0.0,\"Stock_Splits\":0.0}\n",
-      "{\"Datetime\":\"2023-06-29T15:00:00\",\"Open\":30453.05078125,\"High\":30531.21484375,\"Low\":30437.73046875,\"Close\":30477.90234375,\"Volume\":0,\"Dividends\":0.0,\"Stock_Splits\":0.0}\n",
-      "{\"Datetime\":\"2023-06-29T16:00:00\",\"Open\":30474.13671875,\"High\":30556.80859375,\"Low\":30474.13671875,\"Close\":30500.802734375,\"Volume\":0,\"Dividends\":0.0,\"Stock_Splits\":0.0}\n",
-      "{\"Datetime\":\"2023-06-29T17:00:00\",\"Open\":30496.74609375,\"High\":30639.8203125,\"Low\":30446.36328125,\"Close\":30535.990234375,\"Volume\":0,\"Dividends\":0.0,\"Stock_Splits\":0.0}\n",
-      "{\"Datetime\":\"2023-06-29T18:00:00\",\"Open\":30539.12890625,\"High\":30610.484375,\"Low\":30515.318359375,\"Close\":30572.70703125,\"Volume\":24939520,\"Dividends\":0.0,\"Stock_Splits\":0.0}\n",
-      "{\"Datetime\":\"2023-06-29T19:00:00\",\"Open\":30563.767578125,\"High\":30596.470703125,\"Low\":30490.560546875,\"Close\":30596.470703125,\"Volume\":0,\"Dividends\":0.0,\"Stock_Splits\":0.0}\n",
-      "{\"Datetime\":\"2023-06-29T20:00:00\",\"Open\":30595.830078125,\"High\":30632.92578125,\"Low\":30273.216796875,\"Close\":30404.1484375,\"Volume\":415524864,\"Dividends\":0.0,\"Stock_Splits\":0.0}\n",
-      "{\"Datetime\":\"2023-06-29T21:00:00\",\"Open\":30406.349609375,\"High\":30442.90234375,\"Low\":30369.322265625,\"Close\":30416.703125,\"Volume\":0,\"Dividends\":0.0,\"Stock_Splits\":0.0}\n",
-      "{\"Datetime\":\"2023-06-29T22:00:00\",\"Open\":30412.48046875,\"High\":30453.705078125,\"Low\":30408.71875,\"Close\":30408.71875,\"Volume\":0,\"Dividends\":0.0,\"Stock_Splits\":0.0}\n",
-      "{\"Datetime\":\"2023-06-29T23:00:00\",\"Open\":30406.369140625,\"High\":30516.521484375,\"Low\":30398.880859375,\"Close\":30452.0546875,\"Volume\":43190272,\"Dividends\":0.0,\"Stock_Splits\":0.0}\n"
+      "{\"Datetime\":\"2023-07-03T06:00:00\",\"Open\":30674.599609375,\"High\":30681.171875,\"Low\":30628.228515625,\"Close\":30646.96875,\"Volume\":0,\"Dividends\":0.0,\"Stock_Splits\":0.0}\n",
+      "{\"Datetime\":\"2023-07-03T07:00:00\",\"Open\":30651.3515625,\"High\":30746.455078125,\"Low\":30644.861328125,\"Close\":30668.576171875,\"Volume\":287362048,\"Dividends\":0.0,\"Stock_Splits\":0.0}\n",
+      "{\"Datetime\":\"2023-07-03T08:00:00\",\"Open\":30675.458984375,\"High\":30695.072265625,\"Low\":30618.41015625,\"Close\":30645.9140625,\"Volume\":227468288,\"Dividends\":0.0,\"Stock_Splits\":0.0}\n",
+      "{\"Datetime\":\"2023-07-03T09:00:00\",\"Open\":30645.107421875,\"High\":30668.294921875,\"Low\":30611.462890625,\"Close\":30611.462890625,\"Volume\":64418816,\"Dividends\":0.0,\"Stock_Splits\":0.0}\n",
+      "{\"Datetime\":\"2023-07-03T10:00:00\",\"Open\":30612.115234375,\"High\":30666.21875,\"Low\":30605.658203125,\"Close\":30652.93359375,\"Volume\":166940672,\"Dividends\":0.0,\"Stock_Splits\":0.0}\n",
+      "{\"Datetime\":\"2023-07-03T11:00:00\",\"Open\":30652.357421875,\"High\":30673.73046875,\"Low\":30628.65234375,\"Close\":30648.7578125,\"Volume\":275812352,\"Dividends\":0.0,\"Stock_Splits\":0.0}\n",
+      "{\"Datetime\":\"2023-07-03T12:00:00\",\"Open\":30640.31640625,\"High\":30640.31640625,\"Low\":30586.513671875,\"Close\":30637.892578125,\"Volume\":268482560,\"Dividends\":0.0,\"Stock_Splits\":0.0}\n",
+      "{\"Datetime\":\"2023-07-03T13:00:00\",\"Open\":30653.400390625,\"High\":30691.912109375,\"Low\":30617.154296875,\"Close\":30653.873046875,\"Volume\":191156224,\"Dividends\":0.0,\"Stock_Splits\":0.0}\n",
+      "{\"Datetime\":\"2023-07-03T14:00:00\",\"Open\":30662.95703125,\"High\":30754.716796875,\"Low\":30662.95703125,\"Close\":30727.99609375,\"Volume\":130143232,\"Dividends\":0.0,\"Stock_Splits\":0.0}\n",
+      "{\"Datetime\":\"2023-07-03T15:00:00\",\"Open\":30751.595703125,\"High\":31119.783203125,\"Low\":30751.595703125,\"Close\":31056.48828125,\"Volume\":755219456,\"Dividends\":0.0,\"Stock_Splits\":0.0}\n"
      ]
     }
    ],
