--- a/notebooks/Load BTC data to MariaDB.ipynb
+++ b/notebooks/Load BTC data to MariaDB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "8f03d28f-0fc3-4a2f-ab81-3cb100b142c8",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "3623807f-f30c-4cb9-87cd-5e75b6383010",
    "metadata": {},
    "outputs": [
@@ -25,7 +25,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "92ce7625-e298-486d-b0ad-d0bc846bfd62",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "b0f9756e-c062-44f7-b08a-697125a0ea3c",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "b1ccc327-53f6-45a7-a0fb-bad9f2f85f55",
    "metadata": {},
    "outputs": [
@@ -104,52 +104,52 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2023-06-29 14:00:00+00:00</th>\n",
-       "      <td>30601.869141</td>\n",
-       "      <td>30644.109375</td>\n",
-       "      <td>30419.296875</td>\n",
-       "      <td>30459.607422</td>\n",
+       "      <th>2023-07-03 06:00:00+00:00</th>\n",
+       "      <td>30674.599609</td>\n",
+       "      <td>30681.171875</td>\n",
+       "      <td>30628.228516</td>\n",
+       "      <td>30646.968750</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2023-06-29 15:00:00+00:00</th>\n",
-       "      <td>30453.050781</td>\n",
-       "      <td>30531.214844</td>\n",
-       "      <td>30437.730469</td>\n",
-       "      <td>30477.902344</td>\n",
-       "      <td>0</td>\n",
+       "      <th>2023-07-03 07:00:00+00:00</th>\n",
+       "      <td>30651.351562</td>\n",
+       "      <td>30746.455078</td>\n",
+       "      <td>30644.861328</td>\n",
+       "      <td>30668.576172</td>\n",
+       "      <td>287362048</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2023-06-29 16:00:00+00:00</th>\n",
-       "      <td>30474.136719</td>\n",
-       "      <td>30556.808594</td>\n",
-       "      <td>30474.136719</td>\n",
-       "      <td>30500.802734</td>\n",
-       "      <td>0</td>\n",
+       "      <th>2023-07-03 08:00:00+00:00</th>\n",
+       "      <td>30675.458984</td>\n",
+       "      <td>30695.072266</td>\n",
+       "      <td>30618.410156</td>\n",
+       "      <td>30645.914062</td>\n",
+       "      <td>227468288</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2023-06-29 17:00:00+00:00</th>\n",
-       "      <td>30496.746094</td>\n",
-       "      <td>30639.820312</td>\n",
-       "      <td>30446.363281</td>\n",
-       "      <td>30535.990234</td>\n",
-       "      <td>0</td>\n",
+       "      <th>2023-07-03 09:00:00+00:00</th>\n",
+       "      <td>30645.107422</td>\n",
+       "      <td>30668.294922</td>\n",
+       "      <td>30611.462891</td>\n",
+       "      <td>30611.462891</td>\n",
+       "      <td>64418816</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2023-06-29 18:00:00+00:00</th>\n",
-       "      <td>30539.128906</td>\n",
-       "      <td>30610.484375</td>\n",
-       "      <td>30515.318359</td>\n",
-       "      <td>30572.707031</td>\n",
-       "      <td>24939520</td>\n",
+       "      <th>2023-07-03 10:00:00+00:00</th>\n",
+       "      <td>30612.115234</td>\n",
+       "      <td>30666.218750</td>\n",
+       "      <td>30605.658203</td>\n",
+       "      <td>30652.933594</td>\n",
+       "      <td>166940672</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
@@ -164,93 +164,93 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2023-12-29 10:00:00+00:00</th>\n",
-       "      <td>42657.527344</td>\n",
-       "      <td>42810.738281</td>\n",
-       "      <td>42657.527344</td>\n",
-       "      <td>42761.593750</td>\n",
-       "      <td>145475584</td>\n",
+       "      <th>2024-01-03 02:00:00+00:00</th>\n",
+       "      <td>45326.062500</td>\n",
+       "      <td>45406.113281</td>\n",
+       "      <td>45252.988281</td>\n",
+       "      <td>45280.042969</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2023-12-29 11:00:00+00:00</th>\n",
-       "      <td>42731.996094</td>\n",
-       "      <td>42934.066406</td>\n",
-       "      <td>42724.546875</td>\n",
-       "      <td>42920.796875</td>\n",
-       "      <td>338888704</td>\n",
+       "      <th>2024-01-03 03:00:00+00:00</th>\n",
+       "      <td>45294.312500</td>\n",
+       "      <td>45318.109375</td>\n",
+       "      <td>45206.195312</td>\n",
+       "      <td>45264.617188</td>\n",
+       "      <td>1206272</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2023-12-29 12:00:00+00:00</th>\n",
-       "      <td>42913.878906</td>\n",
-       "      <td>42963.156250</td>\n",
-       "      <td>42799.492188</td>\n",
-       "      <td>42849.179688</td>\n",
-       "      <td>98459648</td>\n",
+       "      <th>2024-01-03 04:00:00+00:00</th>\n",
+       "      <td>45280.339844</td>\n",
+       "      <td>45288.914062</td>\n",
+       "      <td>45153.636719</td>\n",
+       "      <td>45193.871094</td>\n",
+       "      <td>5404672</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2023-12-29 13:00:00+00:00</th>\n",
-       "      <td>42854.785156</td>\n",
-       "      <td>42892.738281</td>\n",
-       "      <td>42746.992188</td>\n",
-       "      <td>42826.664062</td>\n",
-       "      <td>28100608</td>\n",
+       "      <th>2024-01-03 05:00:00+00:00</th>\n",
+       "      <td>45196.199219</td>\n",
+       "      <td>45301.718750</td>\n",
+       "      <td>45159.972656</td>\n",
+       "      <td>45194.214844</td>\n",
+       "      <td>34723840</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2023-12-29 14:00:00+00:00</th>\n",
-       "      <td>42844.949219</td>\n",
-       "      <td>42872.339844</td>\n",
-       "      <td>42827.796875</td>\n",
-       "      <td>42828.507812</td>\n",
-       "      <td>1103872</td>\n",
+       "      <th>2024-01-03 06:00:00+00:00</th>\n",
+       "      <td>45195.441406</td>\n",
+       "      <td>45228.691406</td>\n",
+       "      <td>45178.714844</td>\n",
+       "      <td>45228.691406</td>\n",
+       "      <td>40957952</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4392 rows × 7 columns</p>\n",
+       "<p>4416 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                                   Open          High           Low  \\\n",
        "Datetime                                                              \n",
-       "2023-06-29 14:00:00+00:00  30601.869141  30644.109375  30419.296875   \n",
-       "2023-06-29 15:00:00+00:00  30453.050781  30531.214844  30437.730469   \n",
-       "2023-06-29 16:00:00+00:00  30474.136719  30556.808594  30474.136719   \n",
-       "2023-06-29 17:00:00+00:00  30496.746094  30639.820312  30446.363281   \n",
-       "2023-06-29 18:00:00+00:00  30539.128906  30610.484375  30515.318359   \n",
+       "2023-07-03 06:00:00+00:00  30674.599609  30681.171875  30628.228516   \n",
+       "2023-07-03 07:00:00+00:00  30651.351562  30746.455078  30644.861328   \n",
+       "2023-07-03 08:00:00+00:00  30675.458984  30695.072266  30618.410156   \n",
+       "2023-07-03 09:00:00+00:00  30645.107422  30668.294922  30611.462891   \n",
+       "2023-07-03 10:00:00+00:00  30612.115234  30666.218750  30605.658203   \n",
        "...                                 ...           ...           ...   \n",
-       "2023-12-29 10:00:00+00:00  42657.527344  42810.738281  42657.527344   \n",
-       "2023-12-29 11:00:00+00:00  42731.996094  42934.066406  42724.546875   \n",
-       "2023-12-29 12:00:00+00:00  42913.878906  42963.156250  42799.492188   \n",
-       "2023-12-29 13:00:00+00:00  42854.785156  42892.738281  42746.992188   \n",
-       "2023-12-29 14:00:00+00:00  42844.949219  42872.339844  42827.796875   \n",
+       "2024-01-03 02:00:00+00:00  45326.062500  45406.113281  45252.988281   \n",
+       "2024-01-03 03:00:00+00:00  45294.312500  45318.109375  45206.195312   \n",
+       "2024-01-03 04:00:00+00:00  45280.339844  45288.914062  45153.636719   \n",
+       "2024-01-03 05:00:00+00:00  45196.199219  45301.718750  45159.972656   \n",
+       "2024-01-03 06:00:00+00:00  45195.441406  45228.691406  45178.714844   \n",
        "\n",
        "                                  Close     Volume  Dividends  Stock Splits  \n",
        "Datetime                                                                     \n",
-       "2023-06-29 14:00:00+00:00  30459.607422          0        0.0           0.0  \n",
-       "2023-06-29 15:00:00+00:00  30477.902344          0        0.0           0.0  \n",
-       "2023-06-29 16:00:00+00:00  30500.802734          0        0.0           0.0  \n",
-       "2023-06-29 17:00:00+00:00  30535.990234          0        0.0           0.0  \n",
-       "2023-06-29 18:00:00+00:00  30572.707031   24939520        0.0           0.0  \n",
+       "2023-07-03 06:00:00+00:00  30646.968750          0        0.0           0.0  \n",
+       "2023-07-03 07:00:00+00:00  30668.576172  287362048        0.0           0.0  \n",
+       "2023-07-03 08:00:00+00:00  30645.914062  227468288        0.0           0.0  \n",
+       "2023-07-03 09:00:00+00:00  30611.462891   64418816        0.0           0.0  \n",
+       "2023-07-03 10:00:00+00:00  30652.933594  166940672        0.0           0.0  \n",
        "...                                 ...        ...        ...           ...  \n",
-       "2023-12-29 10:00:00+00:00  42761.593750  145475584        0.0           0.0  \n",
-       "2023-12-29 11:00:00+00:00  42920.796875  338888704        0.0           0.0  \n",
-       "2023-12-29 12:00:00+00:00  42849.179688   98459648        0.0           0.0  \n",
-       "2023-12-29 13:00:00+00:00  42826.664062   28100608        0.0           0.0  \n",
-       "2023-12-29 14:00:00+00:00  42828.507812    1103872        0.0           0.0  \n",
+       "2024-01-03 02:00:00+00:00  45280.042969          0        0.0           0.0  \n",
+       "2024-01-03 03:00:00+00:00  45264.617188    1206272        0.0           0.0  \n",
+       "2024-01-03 04:00:00+00:00  45193.871094    5404672        0.0           0.0  \n",
+       "2024-01-03 05:00:00+00:00  45194.214844   34723840        0.0           0.0  \n",
+       "2024-01-03 06:00:00+00:00  45228.691406   40957952        0.0           0.0  \n",
        "\n",
-       "[4392 rows x 7 columns]"
+       "[4416 rows x 7 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,17 +261,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "bc97e676-000b-478a-a767-6f2c6e22c6f2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4392"
+       "4416"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "6d20cc85-c3e6-41a8-9fd0-93b025f8b776",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(datetime.datetime(2023, 6, 29, 14, 0), 30601.869140625, 30644.109375, 30419.296875, 30459.607421875, 0, 0.0, 0.0), (datetime.datetime(2023, 6, 29, 15, 0), 30453.05078125, 30531.21484375, 30437.73046875, 30477.90234375, 0, 0.0, 0.0), (datetime.datetime(2023, 6, 29, 16, 0), 30474.13671875, 30556.80859375, 30474.13671875, 30500.802734375, 0, 0.0, 0.0), (datetime.datetime(2023, 6, 29, 17, 0), 30496.74609375, 30639.8203125, 30446.36328125, 30535.990234375, 0, 0.0, 0.0), (datetime.datetime(2023, 6, 29, 18, 0), 30539.12890625, 30610.484375, 30515.318359375, 30572.70703125, 24939520, 0.0, 0.0), (datetime.datetime(2023, 6, 29, 19, 0), 30563.767578125, 30596.470703125, 30490.560546875, 30596.470703125, 0, 0.0, 0.0), (datetime.datetime(2023, 6, 29, 20, 0), 30595.830078125, 30632.92578125, 30273.216796875, 30404.1484375, 415524864, 0.0, 0.0), (datetime.datetime(2023, 6, 29, 21, 0), 30406.349609375, 30442.90234375, 30369.322265625, 30416.703125, 0, 0.0, 0.0), (datetime.datetime(2023, 6, 29, 22, 0), 30412.48046875, 30453.705078125, 30408.71875, 30408.71875, 0, 0.0, 0.0), (datetime.datetime(2023, 6, 29, 23, 0), 30406.369140625, 30516.521484375, 30398.880859375, 30452.0546875, 43190272, 0.0, 0.0)]\n"
+      "[(datetime.datetime(2023, 7, 3, 6, 0), 30674.599609375, 30681.171875, 30628.228515625, 30646.96875, 0, 0.0, 0.0), (datetime.datetime(2023, 7, 3, 7, 0), 30651.3515625, 30746.455078125, 30644.861328125, 30668.576171875, 287362048, 0.0, 0.0), (datetime.datetime(2023, 7, 3, 8, 0), 30675.458984375, 30695.072265625, 30618.41015625, 30645.9140625, 227468288, 0.0, 0.0), (datetime.datetime(2023, 7, 3, 9, 0), 30645.107421875, 30668.294921875, 30611.462890625, 30611.462890625, 64418816, 0.0, 0.0), (datetime.datetime(2023, 7, 3, 10, 0), 30612.115234375, 30666.21875, 30605.658203125, 30652.93359375, 166940672, 0.0, 0.0), (datetime.datetime(2023, 7, 3, 11, 0), 30652.357421875, 30673.73046875, 30628.65234375, 30648.7578125, 275812352, 0.0, 0.0), (datetime.datetime(2023, 7, 3, 12, 0), 30640.31640625, 30640.31640625, 30586.513671875, 30637.892578125, 268482560, 0.0, 0.0), (datetime.datetime(2023, 7, 3, 13, 0), 30653.400390625, 30691.912109375, 30617.154296875, 30653.873046875, 191156224, 0.0, 0.0), (datetime.datetime(2023, 7, 3, 14, 0), 30662.95703125, 30754.716796875, 30662.95703125, 30727.99609375, 130143232, 0.0, 0.0), (datetime.datetime(2023, 7, 3, 15, 0), 30751.595703125, 31119.783203125, 30751.595703125, 31056.48828125, 755219456, 0.0, 0.0)]\n"
      ]
     }
    ],
