feat: making the Flask APIs for latest price prediction

--- a/notebooks/Load BTC data to MariaDB.ipynb
+++ b/notebooks/Load BTC data to MariaDB.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "b0f9756e-c062-44f7-b08a-697125a0ea3c",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "id": "b1ccc327-53f6-45a7-a0fb-bad9f2f85f55",
    "metadata": {},
    "outputs": [
@@ -104,52 +104,52 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2023-07-03 06:00:00+00:00</th>\n",
-       "      <td>30674.599609</td>\n",
-       "      <td>30681.171875</td>\n",
-       "      <td>30628.228516</td>\n",
-       "      <td>30646.968750</td>\n",
+       "      <th>2023-07-04 13:00:00+00:00</th>\n",
+       "      <td>31051.222656</td>\n",
+       "      <td>31060.732422</td>\n",
+       "      <td>31000.140625</td>\n",
+       "      <td>31007.480469</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2023-07-03 07:00:00+00:00</th>\n",
-       "      <td>30651.351562</td>\n",
-       "      <td>30746.455078</td>\n",
-       "      <td>30644.861328</td>\n",
-       "      <td>30668.576172</td>\n",
-       "      <td>287362048</td>\n",
+       "      <th>2023-07-04 14:00:00+00:00</th>\n",
+       "      <td>31020.281250</td>\n",
+       "      <td>31048.974609</td>\n",
+       "      <td>30978.685547</td>\n",
+       "      <td>30978.685547</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2023-07-03 08:00:00+00:00</th>\n",
-       "      <td>30675.458984</td>\n",
-       "      <td>30695.072266</td>\n",
-       "      <td>30618.410156</td>\n",
-       "      <td>30645.914062</td>\n",
-       "      <td>227468288</td>\n",
+       "      <th>2023-07-04 15:00:00+00:00</th>\n",
+       "      <td>30980.777344</td>\n",
+       "      <td>31011.117188</td>\n",
+       "      <td>30910.167969</td>\n",
+       "      <td>30953.216797</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2023-07-03 09:00:00+00:00</th>\n",
-       "      <td>30645.107422</td>\n",
-       "      <td>30668.294922</td>\n",
-       "      <td>30611.462891</td>\n",
-       "      <td>30611.462891</td>\n",
-       "      <td>64418816</td>\n",
+       "      <th>2023-07-04 16:00:00+00:00</th>\n",
+       "      <td>30965.195312</td>\n",
+       "      <td>31105.996094</td>\n",
+       "      <td>30893.890625</td>\n",
+       "      <td>30956.166016</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2023-07-03 10:00:00+00:00</th>\n",
-       "      <td>30612.115234</td>\n",
-       "      <td>30666.218750</td>\n",
-       "      <td>30605.658203</td>\n",
-       "      <td>30652.933594</td>\n",
-       "      <td>166940672</td>\n",
+       "      <th>2023-07-04 17:00:00+00:00</th>\n",
+       "      <td>30959.703125</td>\n",
+       "      <td>30994.113281</td>\n",
+       "      <td>30884.324219</td>\n",
+       "      <td>30899.199219</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
@@ -164,52 +164,52 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2024-01-03 02:00:00+00:00</th>\n",
-       "      <td>45326.062500</td>\n",
-       "      <td>45406.113281</td>\n",
-       "      <td>45252.988281</td>\n",
-       "      <td>45280.042969</td>\n",
+       "      <th>2024-01-04 09:00:00+00:00</th>\n",
+       "      <td>42881.000000</td>\n",
+       "      <td>43100.957031</td>\n",
+       "      <td>42881.000000</td>\n",
+       "      <td>43048.972656</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2024-01-03 03:00:00+00:00</th>\n",
-       "      <td>45294.312500</td>\n",
-       "      <td>45318.109375</td>\n",
-       "      <td>45206.195312</td>\n",
-       "      <td>45264.617188</td>\n",
-       "      <td>1206272</td>\n",
+       "      <th>2024-01-04 10:00:00+00:00</th>\n",
+       "      <td>43051.113281</td>\n",
+       "      <td>43121.242188</td>\n",
+       "      <td>42761.101562</td>\n",
+       "      <td>43114.976562</td>\n",
+       "      <td>327573504</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2024-01-03 04:00:00+00:00</th>\n",
-       "      <td>45280.339844</td>\n",
-       "      <td>45288.914062</td>\n",
-       "      <td>45153.636719</td>\n",
-       "      <td>45193.871094</td>\n",
-       "      <td>5404672</td>\n",
+       "      <th>2024-01-04 11:00:00+00:00</th>\n",
+       "      <td>43118.507812</td>\n",
+       "      <td>43265.332031</td>\n",
+       "      <td>43021.183594</td>\n",
+       "      <td>43212.222656</td>\n",
+       "      <td>7073792</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2024-01-03 05:00:00+00:00</th>\n",
-       "      <td>45196.199219</td>\n",
-       "      <td>45301.718750</td>\n",
-       "      <td>45159.972656</td>\n",
-       "      <td>45194.214844</td>\n",
-       "      <td>34723840</td>\n",
+       "      <th>2024-01-04 12:00:00+00:00</th>\n",
+       "      <td>43215.875000</td>\n",
+       "      <td>43430.929688</td>\n",
+       "      <td>43159.660156</td>\n",
+       "      <td>43410.617188</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2024-01-03 06:00:00+00:00</th>\n",
-       "      <td>45195.441406</td>\n",
-       "      <td>45228.691406</td>\n",
-       "      <td>45178.714844</td>\n",
-       "      <td>45228.691406</td>\n",
-       "      <td>40957952</td>\n",
+       "      <th>2024-01-04 13:00:00+00:00</th>\n",
+       "      <td>43408.664062</td>\n",
+       "      <td>43512.226562</td>\n",
+       "      <td>43248.703125</td>\n",
+       "      <td>43512.226562</td>\n",
+       "      <td>2449408</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
@@ -221,36 +221,36 @@
       "text/plain": [
        "                                   Open          High           Low  \\\n",
        "Datetime                                                              \n",
-       "2023-07-03 06:00:00+00:00  30674.599609  30681.171875  30628.228516   \n",
-       "2023-07-03 07:00:00+00:00  30651.351562  30746.455078  30644.861328   \n",
-       "2023-07-03 08:00:00+00:00  30675.458984  30695.072266  30618.410156   \n",
-       "2023-07-03 09:00:00+00:00  30645.107422  30668.294922  30611.462891   \n",
-       "2023-07-03 10:00:00+00:00  30612.115234  30666.218750  30605.658203   \n",
+       "2023-07-04 13:00:00+00:00  31051.222656  31060.732422  31000.140625   \n",
+       "2023-07-04 14:00:00+00:00  31020.281250  31048.974609  30978.685547   \n",
+       "2023-07-04 15:00:00+00:00  30980.777344  31011.117188  30910.167969   \n",
+       "2023-07-04 16:00:00+00:00  30965.195312  31105.996094  30893.890625   \n",
+       "2023-07-04 17:00:00+00:00  30959.703125  30994.113281  30884.324219   \n",
        "...                                 ...           ...           ...   \n",
-       "2024-01-03 02:00:00+00:00  45326.062500  45406.113281  45252.988281   \n",
-       "2024-01-03 03:00:00+00:00  45294.312500  45318.109375  45206.195312   \n",
-       "2024-01-03 04:00:00+00:00  45280.339844  45288.914062  45153.636719   \n",
-       "2024-01-03 05:00:00+00:00  45196.199219  45301.718750  45159.972656   \n",
-       "2024-01-03 06:00:00+00:00  45195.441406  45228.691406  45178.714844   \n",
+       "2024-01-04 09:00:00+00:00  42881.000000  43100.957031  42881.000000   \n",
+       "2024-01-04 10:00:00+00:00  43051.113281  43121.242188  42761.101562   \n",
+       "2024-01-04 11:00:00+00:00  43118.507812  43265.332031  43021.183594   \n",
+       "2024-01-04 12:00:00+00:00  43215.875000  43430.929688  43159.660156   \n",
+       "2024-01-04 13:00:00+00:00  43408.664062  43512.226562  43248.703125   \n",
        "\n",
        "                                  Close     Volume  Dividends  Stock Splits  \n",
        "Datetime                                                                     \n",
-       "2023-07-03 06:00:00+00:00  30646.968750          0        0.0           0.0  \n",
-       "2023-07-03 07:00:00+00:00  30668.576172  287362048        0.0           0.0  \n",
-       "2023-07-03 08:00:00+00:00  30645.914062  227468288        0.0           0.0  \n",
-       "2023-07-03 09:00:00+00:00  30611.462891   64418816        0.0           0.0  \n",
-       "2023-07-03 10:00:00+00:00  30652.933594  166940672        0.0           0.0  \n",
+       "2023-07-04 13:00:00+00:00  31007.480469          0        0.0           0.0  \n",
+       "2023-07-04 14:00:00+00:00  30978.685547          0        0.0           0.0  \n",
+       "2023-07-04 15:00:00+00:00  30953.216797          0        0.0           0.0  \n",
+       "2023-07-04 16:00:00+00:00  30956.166016          0        0.0           0.0  \n",
+       "2023-07-04 17:00:00+00:00  30899.199219          0        0.0           0.0  \n",
        "...                                 ...        ...        ...           ...  \n",
-       "2024-01-03 02:00:00+00:00  45280.042969          0        0.0           0.0  \n",
-       "2024-01-03 03:00:00+00:00  45264.617188    1206272        0.0           0.0  \n",
-       "2024-01-03 04:00:00+00:00  45193.871094    5404672        0.0           0.0  \n",
-       "2024-01-03 05:00:00+00:00  45194.214844   34723840        0.0           0.0  \n",
-       "2024-01-03 06:00:00+00:00  45228.691406   40957952        0.0           0.0  \n",
+       "2024-01-04 09:00:00+00:00  43048.972656          0        0.0           0.0  \n",
+       "2024-01-04 10:00:00+00:00  43114.976562  327573504        0.0           0.0  \n",
+       "2024-01-04 11:00:00+00:00  43212.222656    7073792        0.0           0.0  \n",
+       "2024-01-04 12:00:00+00:00  43410.617188          0        0.0           0.0  \n",
+       "2024-01-04 13:00:00+00:00  43512.226562    2449408        0.0           0.0  \n",
        "\n",
        "[4416 rows x 7 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "id": "bc97e676-000b-478a-a767-6f2c6e22c6f2",
    "metadata": {},
    "outputs": [
@@ -271,7 +271,7 @@
        "4416"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "id": "6d20cc85-c3e6-41a8-9fd0-93b025f8b776",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(datetime.datetime(2023, 7, 3, 6, 0), 30674.599609375, 30681.171875, 30628.228515625, 30646.96875, 0, 0.0, 0.0), (datetime.datetime(2023, 7, 3, 7, 0), 30651.3515625, 30746.455078125, 30644.861328125, 30668.576171875, 287362048, 0.0, 0.0), (datetime.datetime(2023, 7, 3, 8, 0), 30675.458984375, 30695.072265625, 30618.41015625, 30645.9140625, 227468288, 0.0, 0.0), (datetime.datetime(2023, 7, 3, 9, 0), 30645.107421875, 30668.294921875, 30611.462890625, 30611.462890625, 64418816, 0.0, 0.0), (datetime.datetime(2023, 7, 3, 10, 0), 30612.115234375, 30666.21875, 30605.658203125, 30652.93359375, 166940672, 0.0, 0.0), (datetime.datetime(2023, 7, 3, 11, 0), 30652.357421875, 30673.73046875, 30628.65234375, 30648.7578125, 275812352, 0.0, 0.0), (datetime.datetime(2023, 7, 3, 12, 0), 30640.31640625, 30640.31640625, 30586.513671875, 30637.892578125, 268482560, 0.0, 0.0), (datetime.datetime(2023, 7, 3, 13, 0), 30653.400390625, 30691.912109375, 30617.154296875, 30653.873046875, 191156224, 0.0, 0.0), (datetime.datetime(2023, 7, 3, 14, 0), 30662.95703125, 30754.716796875, 30662.95703125, 30727.99609375, 130143232, 0.0, 0.0), (datetime.datetime(2023, 7, 3, 15, 0), 30751.595703125, 31119.783203125, 30751.595703125, 31056.48828125, 755219456, 0.0, 0.0)]\n"
+      "[(datetime.datetime(2023, 7, 4, 13, 0), 31051.22265625, 31060.732421875, 31000.140625, 31007.48046875, 0, 0.0, 0.0), (datetime.datetime(2023, 7, 4, 14, 0), 31020.28125, 31048.974609375, 30978.685546875, 30978.685546875, 0, 0.0, 0.0), (datetime.datetime(2023, 7, 4, 15, 0), 30980.77734375, 31011.1171875, 30910.16796875, 30953.216796875, 0, 0.0, 0.0), (datetime.datetime(2023, 7, 4, 16, 0), 30965.1953125, 31105.99609375, 30893.890625, 30956.166015625, 0, 0.0, 0.0), (datetime.datetime(2023, 7, 4, 17, 0), 30959.703125, 30994.11328125, 30884.32421875, 30899.19921875, 0, 0.0, 0.0), (datetime.datetime(2023, 7, 4, 18, 0), 30895.5703125, 30939.51171875, 30853.421875, 30901.572265625, 0, 0.0, 0.0), (datetime.datetime(2023, 7, 4, 19, 0), 30909.501953125, 30915.03515625, 30659.35546875, 30711.66796875, 0, 0.0, 0.0), (datetime.datetime(2023, 7, 4, 20, 0), 30700.72265625, 30812.85546875, 30700.62109375, 30803.97265625, 0, 0.0, 0.0), (datetime.datetime(2023, 7, 4, 21, 0), 30809.564453125, 30826.189453125, 30766.03125, 30810.494140625, 0, 0.0, 0.0), (datetime.datetime(2023, 7, 4, 22, 0), 30805.6484375, 30819.912109375, 30777.28515625, 30819.912109375, 0, 0.0, 0.0)]\n"
      ]
     }
    ],
