--- a/notebooks/SQLAlchemy lookup functions for MariaDB and fastAPI.ipynb
+++ b/notebooks/SQLAlchemy lookup functions for MariaDB and fastAPI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "33df054e-d2ea-4ae0-9098-c16e33722874",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "a47cf472-c3bd-47f8-aa88-209fa527293a",
    "metadata": {},
    "outputs": [
@@ -27,7 +27,7 @@
        "True"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "b13ceeeb-2b54-4b58-8802-bff39b0af455",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "9707ffd2-c89b-4a76-8c04-42470879a3d5",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "id": "5e8394c0-fc4a-4580-a5c4-b3d8b79e5020",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "id": "b593d77b-45e9-46bf-9f0b-2a8daa8b05f6",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[datetime.datetime(2024, 1, 1, 19, 0), datetime.datetime(2024, 1, 1, 20, 0), datetime.datetime(2024, 1, 1, 21, 0), datetime.datetime(2024, 1, 1, 22, 0), datetime.datetime(2024, 1, 1, 23, 0), datetime.datetime(2024, 1, 2, 0, 0), datetime.datetime(2024, 1, 2, 1, 0), datetime.datetime(2024, 1, 2, 2, 0), datetime.datetime(2024, 1, 2, 3, 0), datetime.datetime(2024, 1, 2, 4, 0), datetime.datetime(2024, 1, 2, 5, 0), datetime.datetime(2024, 1, 2, 6, 0), datetime.datetime(2024, 1, 2, 7, 0), datetime.datetime(2024, 1, 2, 8, 0), datetime.datetime(2024, 1, 2, 9, 0), datetime.datetime(2024, 1, 2, 10, 0), datetime.datetime(2024, 1, 2, 11, 0), datetime.datetime(2024, 1, 2, 12, 0), datetime.datetime(2024, 1, 2, 13, 0), datetime.datetime(2024, 1, 2, 14, 0), datetime.datetime(2024, 1, 2, 15, 0), datetime.datetime(2024, 1, 2, 16, 0), datetime.datetime(2024, 1, 2, 17, 0), datetime.datetime(2024, 1, 2, 18, 0), datetime.datetime(2024, 1, 2, 19, 0), datetime.datetime(2024, 1, 2, 20, 0), datetime.datetime(2024, 1, 2, 21, 0), datetime.datetime(2024, 1, 2, 22, 0), datetime.datetime(2024, 1, 2, 23, 0), datetime.datetime(2024, 1, 3, 0, 0), datetime.datetime(2024, 1, 3, 1, 0), datetime.datetime(2024, 1, 3, 2, 0), datetime.datetime(2024, 1, 3, 3, 0), datetime.datetime(2024, 1, 3, 4, 0), datetime.datetime(2024, 1, 3, 5, 0), datetime.datetime(2024, 1, 3, 6, 0)]\n"
+      "[datetime.datetime(2023, 12, 4, 13, 0), datetime.datetime(2023, 12, 4, 14, 0), datetime.datetime(2023, 12, 4, 15, 0), datetime.datetime(2023, 12, 4, 16, 0), datetime.datetime(2023, 12, 4, 17, 0), datetime.datetime(2023, 12, 4, 18, 0), datetime.datetime(2023, 12, 4, 19, 0), datetime.datetime(2023, 12, 4, 20, 0), datetime.datetime(2023, 12, 4, 21, 0), datetime.datetime(2023, 12, 4, 22, 0), datetime.datetime(2023, 12, 4, 23, 0), datetime.datetime(2023, 12, 5, 0, 0), datetime.datetime(2023, 12, 5, 1, 0), datetime.datetime(2023, 12, 5, 2, 0), datetime.datetime(2023, 12, 5, 3, 0), datetime.datetime(2023, 12, 5, 4, 0), datetime.datetime(2023, 12, 5, 5, 0), datetime.datetime(2023, 12, 5, 6, 0), datetime.datetime(2023, 12, 5, 7, 0), datetime.datetime(2023, 12, 5, 8, 0), datetime.datetime(2023, 12, 5, 9, 0), datetime.datetime(2023, 12, 5, 10, 0), datetime.datetime(2023, 12, 5, 11, 0), datetime.datetime(2023, 12, 5, 12, 0), datetime.datetime(2023, 12, 5, 13, 0), datetime.datetime(2023, 12, 5, 14, 0), datetime.datetime(2023, 12, 5, 15, 0), datetime.datetime(2023, 12, 5, 16, 0), datetime.datetime(2023, 12, 5, 17, 0), datetime.datetime(2023, 12, 5, 18, 0), datetime.datetime(2023, 12, 5, 19, 0), datetime.datetime(2023, 12, 5, 20, 0), datetime.datetime(2023, 12, 5, 21, 0), datetime.datetime(2023, 12, 5, 22, 0), datetime.datetime(2023, 12, 5, 23, 0), datetime.datetime(2023, 12, 6, 0, 0), datetime.datetime(2023, 12, 6, 1, 0), datetime.datetime(2023, 12, 6, 2, 0), datetime.datetime(2023, 12, 6, 3, 0), datetime.datetime(2023, 12, 6, 4, 0), datetime.datetime(2023, 12, 6, 5, 0), datetime.datetime(2023, 12, 6, 6, 0), datetime.datetime(2023, 12, 6, 7, 0), datetime.datetime(2023, 12, 6, 8, 0), datetime.datetime(2023, 12, 6, 9, 0), datetime.datetime(2023, 12, 6, 10, 0), datetime.datetime(2023, 12, 6, 11, 0), datetime.datetime(2023, 12, 6, 12, 0), datetime.datetime(2023, 12, 6, 13, 0), datetime.datetime(2023, 12, 6, 14, 0), datetime.datetime(2023, 12, 6, 15, 0), datetime.datetime(2023, 12, 6, 16, 0), datetime.datetime(2023, 12, 6, 17, 0), datetime.datetime(2023, 12, 6, 18, 0), datetime.datetime(2023, 12, 6, 19, 0), datetime.datetime(2023, 12, 6, 20, 0), datetime.datetime(2023, 12, 6, 21, 0), datetime.datetime(2023, 12, 6, 22, 0), datetime.datetime(2023, 12, 6, 23, 0), datetime.datetime(2023, 12, 7, 0, 0), datetime.datetime(2023, 12, 7, 1, 0), datetime.datetime(2023, 12, 7, 2, 0), datetime.datetime(2023, 12, 7, 3, 0), datetime.datetime(2023, 12, 7, 4, 0), datetime.datetime(2023, 12, 7, 5, 0), datetime.datetime(2023, 12, 7, 6, 0), datetime.datetime(2023, 12, 7, 7, 0), datetime.datetime(2023, 12, 7, 8, 0), datetime.datetime(2023, 12, 7, 9, 0), datetime.datetime(2023, 12, 7, 10, 0), datetime.datetime(2023, 12, 7, 11, 0), datetime.datetime(2023, 12, 7, 12, 0), datetime.datetime(2023, 12, 7, 13, 0), datetime.datetime(2023, 12, 7, 14, 0), datetime.datetime(2023, 12, 7, 15, 0), datetime.datetime(2023, 12, 7, 16, 0), datetime.datetime(2023, 12, 7, 17, 0), datetime.datetime(2023, 12, 7, 18, 0), datetime.datetime(2023, 12, 7, 19, 0), datetime.datetime(2023, 12, 7, 20, 0), datetime.datetime(2023, 12, 7, 21, 0), datetime.datetime(2023, 12, 7, 22, 0), datetime.datetime(2023, 12, 7, 23, 0), datetime.datetime(2023, 12, 8, 0, 0), datetime.datetime(2023, 12, 8, 1, 0), datetime.datetime(2023, 12, 8, 2, 0), datetime.datetime(2023, 12, 8, 3, 0), datetime.datetime(2023, 12, 8, 4, 0), datetime.datetime(2023, 12, 8, 5, 0), datetime.datetime(2023, 12, 8, 6, 0), datetime.datetime(2023, 12, 8, 7, 0), datetime.datetime(2023, 12, 8, 8, 0), datetime.datetime(2023, 12, 8, 9, 0), datetime.datetime(2023, 12, 8, 10, 0), datetime.datetime(2023, 12, 8, 11, 0), datetime.datetime(2023, 12, 8, 12, 0), datetime.datetime(2023, 12, 8, 13, 0), datetime.datetime(2023, 12, 8, 14, 0), datetime.datetime(2023, 12, 8, 15, 0), datetime.datetime(2023, 12, 8, 16, 0)]\n"
      ]
     }
    ],
@@ -96,7 +96,7 @@
     "SessionLocal = sessionmaker(bind=engine)\n",
     "session = SessionLocal()\n",
     "\n",
-    "btc_prices = get_btc_prices(session, offset=4380)\n",
+    "btc_prices = get_btc_prices(session)\n",
     "print([x.Datetime for x in btc_prices])\n",
     "\n",
     "session.close()"
